syntax = "proto3";
option go_package = "github.com/biaferre/gprc-sensor-server/sensor";

message SensorRequest {
    string request_message = 1;
}

message SensorData {
    int32 sensor_id = 1;
    int32 temperature = 2;
}

message SensorResponse {
    float avg_temp = 1;
    float max_temp = 2;
    float min_temp = 3;
    repeated SensorData sensors = 4;
    string err = 5;
}

service Sensor {
    rpc GetSensorData(SensorRequest) returns (SensorResponse);
}
